<resources>
    <string name="app_name">LogStrive</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_habit_name">Habit Name</string>
    <string name="habit_error_msg">Habit name cannot be empty</string>
    <string name="habit_unique_error_msg"> please enter a unique name</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="duration">Duration</string>
    <string name="duration_req">Please set a duration</string>
    <string name="summarize_your_day">Summarize your day</string>
    <string name="habit_name">Habit Name</string>
    <string name="please_enter_a_name">please enter a name</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="overall_mood">overall mood :</string>
    <string name="summary">Summary</string>
    <string name="your_graphs">Your Graphs</string>
    <string name="your_habits">Your Habits</string>
    <string name="yesterdays_record">Yesterday\'s Record</string>
    <string name="hi_user">Hi User</string>
    <string name="todays_record">Today\'s Record</string>
    <string name="add_habit_record">Add Habit Record</string>
    <string name="add_summary">Add summary</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="dont_have_account">don\'t have an account ? click here</string>
    <string name="look_back">Look back</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="log_out">Log out</string>
    <string name="already_have_an_account">already have an account ? click here</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm password</string>
    <string name="workout">Workout</string>
    <string name="no_entries">No Entries</string>
    <string name="please_add_habit">Please add a habit to get started</string>
    <string name="summary_added">Summary added!</string>
    <string name="summary_already_added">Looks like summary already added!</string>
    <string name="login_successful">Login successful !</string>
    <string name="invalid_login_credentials">Invalid login credentials</string>
    <string name="username_condition">Username must be alphanumeric and between 6 and 15 characters</string>
    <string name="password_condition">Password must contain a lowercase, uppercase, number, a special character and between 6 and 12 characters</string>
    <string name="passwords_didnt_match">Passwords didn\'t match</string>
    <string name="username_already_exists"> Looks like username already exists</string>
    <string name="please_enter_summary">Please enter a summary</string>
    <string name="selected_category_id">selected category id :</string>
    <string name="category_name">category name :</string>
    <string name="hi">Hi</string>
    <string name="username_edited">username edited !</string>
    <string name="please_enter_username_correctly">please enter a alphanumeric 6-15 length username</string>
    <string name="bye">Byee!</string>
    <string name="add_records_to_start_your_day">Add records to start your day</string>
    <string name="add_habits_to_start_your_journey">Add habits to start your journey</string>
    <string name="save">Save</string>
    <string name="main_fab">main Fab</string>
    <string name="add_summary_fab">Add summary fab</string>
    <string name="add_habit_fab">add habit fab</string>
</resources>