<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_habit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:hint="@string/habit_name" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_habitname_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_a_name"
            android:layout_marginLeft="15dp"
            android:textColor="@color/error_color"
            android:visibility="gone"
            />

        <Spinner
            android:id="@+id/edit_habit_category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:paddingLeft="8dp"
            android:spinnerMode="dropdown" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:backgroundTint="@color/transparent"
                app:layout_constraintEnd_toStartOf="@+id/delete_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/dialog_btn_color"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:backgroundTint="@color/transparent"
                android:textColor="@color/error_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edit_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/cancel_button"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:backgroundTint="@color/transparent"
                android:textColor="@color/dialog_btn_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/delete_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>
