<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.SignupFragment"
        android:background="@drawable/bg2_dark"
        android:paddingBottom="60dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="170dp"
                android:background="@drawable/line_background"
                android:shadowColor="@color/black"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="3"
                android:text="@string/signup"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textAlignment="center"
                android:textColor="@color/ligtcement"
                android:textSize="40sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etv_newusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:inputType="text"
                android:hint="@string/enter_username"
                android:textColorHint="@color/lightgray"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_signup" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etv_newpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:hint="@string/enter_password"
                android:textColorHint="@color/lightgray"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etv_newusername" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etv_confirmpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:hint="@string/confirm_password"
                android:textColorHint="@color/lightgray"
                android:textAlignment="center"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etv_newpassword" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:background="@drawable/button"
                android:backgroundTint="@color/lightpurple"
                android:text="@string/signup"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/white"
                app:backgroundTint="@color/lightpurple"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etv_confirmpassword"
                app:rippleColor="@color/darkblue1"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_navigate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:text="@string/already_have_an_account"
                android:textColor="@color/ligtcement"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signup_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </FrameLayout>
</layout>