<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.HabitFragment"
        android:background="@color/darkblue2">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--    <androidx.coordinatorlayout.widget.CoordinatorLayout-->
            <!--        android:layout_width="match_parent"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        >-->

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:src="@drawable/bg6_edited"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="3dp"
                android:scaleType="centerCrop"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:background="@drawable/line_dark_background"
                android:paddingLeft="20dp"
                android:text="@string/profile"
                android:textColor="@color/ligtcement"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:text="@string/username"
                android:textColor="@color/ligtcement"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/etv_username"
                app:layout_constraintTop_toBottomOf="@+id/tv_profile" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:inputType="text"
                android:text=""
                android:textColor="@color/ligtcement"
                android:textColorHint="@color/ligtcement"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_username" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_btn"
                android:layout_width="130dp"
                android:layout_height="60dp"

                android:layout_marginTop="40dp"
                android:backgroundTint="@color/purple1"
                android:text="@string/edit"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etv_username" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout_btn"
                android:layout_width="215dp"
                android:layout_height="58dp"
                android:backgroundTint="@color/error_color_darker"
                android:text="@string/log_out"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_marginTop="140dp"
                android:layout_marginBottom="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_btn"
                app:layout_constraintVertical_bias="0.541" />


            <!--    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->
        </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </FrameLayout>
</layout>